--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,3 +1,5 @@
 service_name: travis-ci
-coverage_clover: tests/phpunit/clover.xml
-json_path: tests/phpunit/coveralls-upload.json
+coverage_clover: build/logs/clover.xml
+json_path: build/logs/coveralls-upload.json
+src_dir: .
+exclude_no_stmt: true
